# graphiti-mcp

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  setup.sh
config/: mcp.json.template
docs/: CONFIGURATION.md  INSTALLATION.md
mcp-server/: Dockerfile  Dockerfile.dev  graphiti_mcp_server.py  pyproject.toml  smart_retrieval_mcp.py
scripts/: backup.sh  health-check.sh  mcp-config-generator.sh  restore.sh
